--- a/styles/NumberInput.module.css
+++ b/styles/NumberInput.module.css
@@ -16,3 +16,17 @@
     color:#555;
     font-size: 6rem;
 }
+
+.botao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    height: 80px;
+    width: 80px;
+    margin: 5px;
+}
+
+.botoes{
+    display: flex;
+}
